--- a/Galaxy.PL.CoreMVC/Views/_ViewImports.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using Galaxy.PL.CoreMVC
-@using Galaxy.PL.CoreMVC.Models
+﻿@using PL.CoreMVC
+@using PL.CoreMVC.Models
+@using PL.CoreMVC.Models.ViewModels.Store
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
