--- a/Galaxy.PL.CoreMVC/Views/_ViewImports.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
-﻿@using PL.CoreMVC
-@using PL.CoreMVC.Models
-@using PL.CoreMVC.Models.ViewModels.Store
+﻿@using Galaxy.PL.CoreMVC
+@using Galaxy.PL.CoreMVC.Models
+@using Galaxy.PL.CoreMVC.Models.ViewModels.Store
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
