--- a/Galaxy.PL.CoreMVC/Views/Store/Index.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Store/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model StoreMainViewModel
 
-@await Html.PartialAsync("StoreMenuPartial")
+@await Html.PartialAsync("StoreMenuPartial", Model)
 
 <hr />
 
