--- a/Galaxy.PL.CoreMVC/Views/_ViewImports.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Galaxy.PL.CoreMVC
 @using Galaxy.PL.CoreMVC.Models
 @using Galaxy.PL.CoreMVC.Models.ViewModels.Store
+@using Galaxy.PL.CoreMVC.Models.ViewModels.Cart
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
