--- a/Galaxy.PL.CoreMVC/Views/_ViewImports.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using Galaxy.PL.CoreMVC.Models
 @using Galaxy.PL.CoreMVC.Models.ViewModels.Store
 @using Galaxy.PL.CoreMVC.Models.ViewModels.Cart
+@using Galaxy.PL.CoreMVC.Models.ViewModels.Profile
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
