--- a/Galaxy.PL.CoreMVC/Views/Profile/Index.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Profile/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ProfileMainViewModel
 
-@await Html.PartialAsync("ProfileMenuPartial", Model)
+@await Html.PartialAsync("ProfileMenuPartial")
 
 <hr />
 
