--- a/Galaxy.PL.CoreMVC/Views/Profile/Index.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Profile/Index.cshtml
@@ -22,5 +22,5 @@
                     else if (Model.ContentType == "CreditCardList")
                         @await Html.PartialAsync("CreditCardAddPartial", Model.CreditCardViewModels)
 
-                        else if (Model.ContentType == "CreditCardList")
+                        else if (Model.ContentType == "CreditCardAdd")
                             @await Html.PartialAsync("CreditCardAddPartial", Model.CreditCardViewModels)
