--- a/Galaxy.PL.CoreMVC/Views/Profile/ProfileMenuPartial.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Profile/ProfileMenuPartial.cshtml
@@ -1,17 +1,7 @@
-﻿@model ProfileMainViewModel
-
-<a asp-action="Index" asp-controller="Profile" asp-route-contentType="MyInfo">My Info</a>
+﻿<a asp-action="GetInfo" asp-controller="Profile">My Info</a>
  -
-<a asp-action="Index" asp-controller="Profile" asp-route-contentType="OrderList">My Orders</a>
+<a asp-action="GetOrders" asp-controller="Profile">My Orders</a>
 -
-<a asp-action="Index" asp-controller="Profile" asp-route-contentType="AddressList">My Addresses</a>
+<a asp-action="GetAddresses" asp-controller="Profile">My Addresses</a>
 -
-<a asp-action="Index" asp-controller="Profile" asp-route-contentType="CreditCardList">My Credit Cards</a>
- -
-Logoutx
- -----
-Deliverer
- -
-Packager
- -
-Admin
+<a asp-action="GetCreditCards" asp-controller="Profile">My Credit Cards</a>
