--- a/Galaxy.PL.CoreMVC/Views/Profile/ProfileMenuPartial.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Profile/ProfileMenuPartial.cshtml
@@ -4,4 +4,4 @@
 -
 <a asp-action="GetAddresses" asp-controller="Profile">My Addresses</a>
 -
-<a asp-action="GetCreditCards" asp-controller="Profile">My Credit Cards</a>
+<a asp-action="GetCreditCard" asp-controller="Profile">My Credit Cards</a>
