--- a/Galaxy.PL.CoreMVC/Views/Profile/CreditCardEdit.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Profile/CreditCardEdit.cshtml
@@ -4,8 +4,8 @@
 
 <hr />
 
-<form asp-controller="Profile" asp-action="AddCreditCard" method="post">
-    <input name="ID" type="hidden" value=@Model.ID>
+<form asp-controller="Profile" asp-action="EditCreditCard" method="post">
+    <input name="ID" type="hidden" value=@Model.ID>   
     Card Number: <input asp-for=@Model.CardNumber> <br />
     Expiration Month: <input asp-for=@Model.ExpireDate.Month><br />
     Expiration Year: <input asp-for=@Model.ExpireDate.Year><br />
