--- a/Galaxy.PL.CoreMVC/Views/Profile/ProfileMenuPartial.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Profile/ProfileMenuPartial.cshtml
@@ -1,4 +1,4 @@
-﻿<a asp-action="GetInfo" asp-controller="Profile">My Info</a>
+﻿<a asp-action="Info" asp-controller="Profile">My Info</a>
  -
 <a asp-action="GetOrders" asp-controller="Profile">My Orders</a>
 -
