--- a/Galaxy.PL.CoreMVC/Views/Store/StoreMenuPartial.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Store/StoreMenuPartial.cshtml
@@ -6,7 +6,7 @@
 - 
 <a asp-action="Index" asp-controller="Profile">Profile</a>
  - 
-Logout
+<a asp-action="Logout" asp-controller="Account">Logout</a>
  ----- 
 Deliverer
  - 
