--- a/Galaxy.PL.CoreMVC/Views/Address/AddressEdit.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Address/AddressEdit.cshtml
@@ -4,7 +4,7 @@
 
 <hr />
 
-<form asp-controller="Profile" asp-action="EditAddress" method="post">
+<form asp-controller="Address" asp-action="EditAddress" method="post">
     <input name="ID" type="hidden" value=@Model.ID>
     <input asp-for=@Model.Name>
     <input name="CityID" type="hidden" value=@Model.CityID>
