--- a/Galaxy.PL.CoreMVC/Views/Shared/ProfileMenuPartial.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Shared/ProfileMenuPartial.cshtml
@@ -2,6 +2,6 @@
  -
 <a asp-action="GetOrders" asp-controller="Profile">My Orders</a>
 -
-<a asp-action="GetAddresses" asp-controller="Profile">My Addresses</a>
+<a asp-action="GetAddresses" asp-controller="Address">My Addresses</a>
 -
 <a asp-action="GetCreditCard" asp-controller="Profile">My Credit Cards</a>
