--- a/Galaxy.PL.CoreMVC/Views/CreditCard/CreditCardAdd.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/CreditCard/CreditCardAdd.cshtml
@@ -4,7 +4,7 @@
 
 <hr />
 
-<form asp-controller="Profile" asp-action="AddCreditCard" method="post">
+<form asp-controller="CreditCard" asp-action="AddCreditCard" method="post">
     <input name="ID" type="hidden" value=@Model.ID>
     Card Number: <input asp-for=@Model.CardNumber> <br />
     Expiration Month: <input asp-for=@Model.ExpireDate.Month><br />
