--- a/Galaxy.PL.CoreMVC/Views/Shared/ProfileMenuPartial.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Shared/ProfileMenuPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿<a asp-action="Info" asp-controller="Profile">My Info</a>
  -
-<a asp-action="GetOrders" asp-controller="Profile">My Orders</a>
+<a asp-action="GetOrders" asp-controller="Order">My Orders</a>
 -
 <a asp-action="GetAddresses" asp-controller="Address">My Addresses</a>
 -
