--- a/Galaxy.PL.CoreMVC/Views/_ViewImports.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using Galaxy.PL.CoreMVC.Models.ViewModels.Store
 @using Galaxy.PL.CoreMVC.Models.ViewModels.Cart
 @using Galaxy.PL.CoreMVC.Models.ViewModels.Profile
+@using Galaxy.PL.CoreMVC.Models.ViewModels.Order
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
