--- a/Galaxy.PL.CoreMVC/Views/_ViewImports.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using Galaxy.PL.CoreMVC.Models.ViewModels.Cart
 @using Galaxy.PL.CoreMVC.Models.ViewModels.Profile
 @using Galaxy.PL.CoreMVC.Models.ViewModels.Order
+@using Galaxy.PL.CoreMVC.Models.ViewModels.Packager
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
