--- a/Galaxy.PL.CoreMVC/Views/Store/StoreMenuPartial.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Store/StoreMenuPartial.cshtml
@@ -8,8 +8,8 @@
  - 
 <a asp-action="Logout" asp-controller="Account">Logout</a>
  ----- 
-Deliverer
+<a asp-action="Index" asp-controller="Deliverer">Deliverer</a>
  - 
-Packager
+<a asp-action="Index" asp-controller="Packager">Packager</a>
  - 
-Admin
+<a asp-action="Logout" asp-controller="Admin">Admin</a>
