--- a/Galaxy.PL.CoreMVC/Views/Store/StoreMenuPartial.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Store/StoreMenuPartial.cshtml
@@ -12,4 +12,4 @@
  - 
 <a asp-action="Index" asp-controller="Packager">Packager</a>
  - 
-<a asp-action="Logout" asp-controller="Admin">Admin</a>
+<a asp-action="Index" asp-controller="Admin">Admin</a>
