--- a/Galaxy.PL.CoreMVC/Views/_ViewImports.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/_ViewImports.cshtml
@@ -5,4 +5,5 @@
 @using Galaxy.PL.CoreMVC.Models.ViewModels.Profile
 @using Galaxy.PL.CoreMVC.Models.ViewModels.Order
 @using Galaxy.PL.CoreMVC.Models.ViewModels.Packager
+@using Galaxy.PL.CoreMVC.Models.ViewModels.Deliverer
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
