--- a/Galaxy.PL.CoreMVC/Views/Shared/ErrorPage.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Shared/ErrorPage.cshtml
@@ -1,1 +1,7 @@
-﻿ERROR PAGE!
+﻿@model string
+
+@Model
+
+<hr />
+
+<a class="btn btn-info btn-sm" asp-controller="Home" asp-action="Index">Home</a>
