--- a/Galaxy.PL.CoreMVC/Views/Store/StoreItemsPartial.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Store/StoreItemsPartial.cshtml
@@ -3,26 +3,19 @@
 <ul>
     @foreach (ProductViewModel prod in Model.Products)
     {
-        {
-            var imagePath = "";
-            //if (Request["photoChoice"] != null)
-            //{
-            //    imagePath = @"images\" + Request["photoChoice"];
-            //}
-        }
-
-    <li>
-        @prod.Name
-        ++
-        @prod.FinalPrice
-        ++
-        @prod.Description
-        ++
-        <form asp-controller="Cart" asp-action="AddToCart" method="get">
-            <input name="categoryID" type="hidden" value=@prod.CategoryID>
-            <input name="productID" type="hidden" value=@prod.ID>
-            <button class="btn btn-info btn-sm">Add To Cart</button>
-        </form>
-    </li>
+        <img src="~/Media/Products/underconstruction.png" asp-append-version="true">
+        <li>
+            @prod.Name
+            ++
+            @prod.FinalPrice
+            ++
+            @prod.Description
+            ++
+            <form asp-controller="Cart" asp-action="AddToCart" method="get">
+                <input name="categoryID" type="hidden" value=@prod.CategoryID>
+                <input name="productID" type="hidden" value=@prod.ID>
+                <button class="btn btn-info btn-sm">Add To Cart</button>
+            </form>
+        </li>
     }
 </ul>
