--- a/Galaxy.PL.CoreMVC/Views/Cart/Index.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Cart/Index.cshtml
@@ -1,32 +1,50 @@
 ﻿@model List<CartItem>
 
-<ul>
-    @foreach (CartItem item in Model)
-    {
-        <li>
-            @item.Name
-            ++
-            @item.Price
-            ++
-            @item.Quantity
-            ++
-            <form asp-controller="Cart" asp-action="RemoveFromCart" method="post">
-                <input name="productID" type="hidden" value=@item.ProductID>
-                <button class="btn btn-info btn-sm">Remove</button>
-            </form>
-        </li>
-    }
-</ul>
+<table class="table table-sm table-hover table-bordered table-dark">
+    <thead>
+        <tr>
+            <th>
+                Item Name
+            </th>
+            <th>
+                Price
+            </th>
+            <th>
+                Quantity
+            </th>
+            <th>
+
+            </th>
+        </tr>
+    </thead>
+    <tbody>@foreach (CartItem item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Price)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Quantity)
+                </td>
+                <td>
+                    @*<form asp-controller="Cart" asp-action="RemoveFromCart" method="post">
+                        <input name="productID" type="hidden" value=@item.ProductID>
+                        <button class="btn btn-info btn-sm">Remove</button>
+                    </form>*@
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+<hr />
 
 @if (Model.Count > 0)
 {
-    <form asp-controller="Cart" asp-action="Pay" method="post">
+    <form asp-controller="Cart" asp-action="SelectAddress" method="get">
         <button class="btn btn-info btn-sm">Proceed To Payment</button>
-    </form>
-}
-else
-{
-    <form asp-controller="Cart" asp-action="Pay" method="post">
-        <button class="btn btn-info btn-sm" disabled=true>Proceed To Payment</button>
     </form>
 }
