--- a/Galaxy.PL.CoreMVC/Views/Order/OrderDetails.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Order/OrderDetails.cshtml
@@ -3,9 +3,9 @@
 <hr />
 
 <ul>
-    <li>
-        @Model.OrderID
-        @Model.OrderStatus
-        @Model.PackagerID
+    <li style="color:white">
+        Order ID: @Model.OrderID<br />
+        Order Status: @Model.OrderStatus<br />
+        Deliverer: @Model.DelivererID<br />
     </li>
 </ul>
