--- a/Galaxy.PL.CoreMVC/Views/Store/StoreMenuPartial.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Store/StoreMenuPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@model StoreMainViewModel
 
-<a asp-action="Index" asp-controller="Store">Store</a>
- - 
-<a asp-action="Index" asp-controller="Cart">Cart[$@Model.CartTotal]</a>
+<a asp-action="Index" asp-controller="Store" style="color:red">Store</a>
+ -
+<a asp-action="Index" asp-controller="Cart" style="color:red">Cart[$@Model.CartTotal]</a>
