--- a/Galaxy.PL.CoreMVC/Views/Packager/PackagerOrderDetails.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Packager/PackagerOrderDetails.cshtml
@@ -3,10 +3,19 @@
 <hr />
 
 <ul>
-    <li>
-        @Model.OrderID
-        @Model.OrderStatus
-        @Model.PackagerID
+    <li style="color:white">
+        Order ID: @Model.OrderID
+        Order Status: @Model.OrderStatus
+        
+        @foreach (var detail in Model.Details)
+        {
+            <ul>
+                <li>
+                    Product ID : @detail.ID
+                    Quantity: @detail.Quantity
+                </li>
+            </ul>
+        }
 
         <form asp-controller="Packager" asp-action="AssignDeliverer" method="post">
             <input name="OrderID" type="hidden" value=@Model.OrderID>
@@ -14,8 +23,8 @@
             <input name="PackagerID" type="hidden" value=@Model.PackagerID>
             <input name="CityID" type="hidden" value=@Model.CityID>
             <input name="CountyID" type="hidden" value=@Model.CountyID>
-            Deliverer: <select id="deliverer-selector" asp-for="DelivererID" asp-items="Model.Deliverers"></select>
-            Status:<select id="status-selector" asp-for="OrderStatus" asp-items="Model.OrderStatuses"></select>
+            Deliverer: <select id="deliverer-selector" asp-for="DelivererID" asp-items="Model.Deliverers"></select> <br />
+            Status:<select id="status-selector" asp-for="OrderStatus" asp-items="Model.OrderStatuses"></select><br />
             <button class="btn btn-info btn-sm">Assign</button>
         </form>
     </li>
