--- a/Galaxy.PL.CoreMVC/Views/Shared/ProfileMenuPartial.cshtml
+++ b/Galaxy.PL.CoreMVC/Views/Shared/ProfileMenuPartial.cshtml
@@ -1,7 +1,7 @@
-﻿<a asp-action="Info" asp-controller="Profile">My Info</a>
+﻿<a asp-action="Info" asp-controller="Profile" style="color:red">My Info</a>
  -
-<a asp-action="GetOrders" asp-controller="Order">My Orders</a>
+<a asp-action="GetOrders" asp-controller="Order" style="color:red">My Orders</a>
 -
-<a asp-action="GetAddresses" asp-controller="Address">My Addresses</a>
+<a asp-action="GetAddresses" asp-controller="Address" style="color:red">My Addresses</a>
 -
-<a asp-action="GetCreditCard" asp-controller="Profile">My Credit Cards</a>
+<a asp-action="GetCreditCard" asp-controller="Profile" style="color:red">My Credit Cards</a>
